package com.example.flughafen.model;

// enum for types of email addresses
public enum EmailType {
    PRIVATE,
    BUSINESS,
}
